--- a/resources/plugins/cordova-plugin-contacttracing/plugin.xml
+++ b/resources/plugins/cordova-plugin-contacttracing/plugin.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" id="cordova-plugin-contacttracing" version="1.0.0">
+<plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
+        id="cordova-plugin-contacttracing"
+        version="0.0.1">
 
   <name>ContactTracing</name>
+
+  <engines>
+    <engine name="cordova" version=">=7.1.0"/>
+    <engine name="cordova-android" version=">=7.0.0"/>
+  </engines>
+
   <description>CovidWatch Contact Tracing Library Plugin</description>
   <author>Thomas Zachariah</author>
   <license>Apache 2.0</license>
@@ -14,17 +22,19 @@
     <clobbers target="cordova.plugins.contacttracing" />
   </js-module>
 
-  <platform name="android" kotlin="1.3.0">
-
+  <platform name="android"
+            kotlin="1.3.71">
+    <!-- Add Kotlin support -->
     <hook type="after_plugin_add" src="hooks/support-kotlin.js" />
     <hook type="after_platform_add" src="hooks/support-kotlin.js" />
     <framework src="org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.31"/>
     <apply-plugin>kotlin-android-extensions</apply-plugin>
     <apply-plugin>kotlin-kapt</apply-plugin>
-    <!-- <hook type="before_plugin_rm" src="hooks/on-uninstall.js" /> -->
-    <!-- <hook type="before_plugin_uninstall" src="hooks/on-uninstall.js" /> -->
+    <!-- Cleanup Kotlin source on uninstall -->
+    <hook type="before_plugin_rm" src="hooks/on-uninstall.js" />
+    <hook type="before_plugin_uninstall" src="hooks/on-uninstall.js" />
 
-    <config-file target="res/xml/config.xml" parent="/widget">
+    <config-file target="config.xml" parent="/*">
       <feature name="ContactTracing">
         <param name="android-package" value="org.covidwatch.libcontacttracing.ContactTracing" onload="true"/>
       </feature>
